objects/ssot__VettingEvaluation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vetting Evaluation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordId__c</fullName>
        <label>Reference Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectId__c</fullName>
        <label>Subject</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VettingEvaluationOutcome__c</fullName>
        <label>Vetting Evaluation Outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VettingEvaluationStatus__c</fullName>
        <label>Vetting Evaluation Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366620268_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VettingEvaluation_ApplicationId_map__rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>VettingEvaluation_ApplicationId_map__rel</relationshipLabel>
        <relationshipName>rel_1727366620268_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366622715_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VettingEvaluation_SubjectId_map_Empl_rel</label>
        <referenceTo>ssot__Employee__dlm</referenceTo>
        <relationshipLabel>VettingEvaluation_SubjectId_map_Empl_rel</relationshipLabel>
        <relationshipName>rel_1727366622715_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366632124_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VettingEvaluation_SubjectId_map_Acco_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>VettingEvaluation_SubjectId_map_Acco_rel</relationshipLabel>
        <relationshipName>rel_1727366632124_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>